update invoice and many things

--- a/Website/html/about.html
+++ b/Website/html/about.html
@@ -10,14 +10,12 @@
 <body>
     <header>
         <div>
-            <a href ="web.html">
-                <strong>AWE Electronics</strong></a>
+            <a href ="web.html"><strong>AWE Electronics</strong></a>
         </div>
         <nav>
             <a href="web.html">Home</a>
             <a href="about.html">About</a>
             <a href="product.html">Products</a>
-            <a href="#">Contact</a>
             <a href="checkout.html">Checkout</a>
             <a href="track_order.html">Track Order</a>
             <a href="login_signup.html" class="btn" id="login-logout-btn">Login</a>
@@ -60,5 +58,6 @@
         </div>
     </div>
     <script src="../js/session.js"></script>
+    <script src="../js/customer_name_display.js"></script>
 </body>
 </html> 
