--- a/Website/html/signup.html
+++ b/Website/html/signup.html
@@ -50,5 +50,6 @@
 
   <script src="../js/signup.js"></script>
   <script src="../js/session.js"></script>
+  <script src="../js/customer_name_display.js"></script>
 </body>
 </html>
