--- a/Website/html/web.html
+++ b/Website/html/web.html
@@ -86,5 +86,6 @@
         </div>
     </div>
     <script src="../js/session.js"></script>
+    <script src="../js/customer_name_display.js"></script>
 </body>
 </html>
