--- a/Website/html/customer_product.html
+++ b/Website/html/customer_product.html
@@ -24,5 +24,6 @@
   </section>
 
   <script src="../js/customer_products.js"></script>
+  <script src="../js/customer_name_display.js"></script>
 </body>
 </html>
