--- a/Website/html/product.html
+++ b/Website/html/product.html
@@ -18,7 +18,7 @@
       <a href="product.html">Products</a>
       <a href="checkout.html" class="btn">Checkout (<span id="cart-count">0</span>)</a>
       <a href="track_order.html">Track Order</a>
-      <a href="login_signup.html" class="btn">Login</a>
+      <a href="login_signup.html" class="btn" id="login-logout-btn">Login</a>
     </nav>
   </header>
 
@@ -59,5 +59,6 @@
   <script src="../js/services/ProductService.js"></script>
   <script src="../js/session.js"></script>
   <script src="../js/customer_product.js"></script>
+  <script src="../js/customer_name_display.js"></script>
 </body>
 </html>
