--- a/Website/html/web.html
+++ b/Website/html/web.html
@@ -1,117 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AWE Electronics</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/user.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AWE Electronics</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../css/user.css">
 </head>
 <body>
-    <header>
-        <div>
-            <a href ="web.html">
-                <strong>AWE Electronics</strong></a>
-        </div>
-        <nav>
-            <a href="web.html">Home</a>
-            <a href="#">About</a>
-            <a href="product.html">Products</a>
-            <a href="#">Contact</a>
-            <a href="checkout.html">Checkout</a>
-            <a href="track_order.html" id="track-link" style="display: none;">Track Order</a>
-            <a href="#" id="logoutBtn" class="btn" style="display: none;">Logout</a>
-            <a href="login_signup.html" class="btn" id="loginBtn">Login</a>
-        </nav>
-    </header>
-
-    <section>
-        <div class="text-block">
-            <p>Discover the Latest Smart Home Automation</p>
-            <h1>Elevate Your Living Space</h1>
-            <p>Revolutionize your home with cutting-edge smart technology. Seamlessly integrate your devices and optimize efficiency.</p>
-            <a href="product.html">
-                <button>Explore Products</button>
-            </a>
-        </div>
-        <div class="image-block">
-            <img src="../images/smart device.jpg" alt="Smart Device" />
-        </div>
-    </section>
-
-    <section>
-        <div class="image-block">
-            <img src="../images/apple watch ultra.jpg" alt="Tablet" />
-        </div>
-        <div class="text-block">
-            <h2>Enhance Your Digital Experience</h2>
-            <p>Seamless digital integration for smart productivity, lifestyle enhancements, and more.</p>
-            <a href="product.html" class="btn">
-                <button>Shop Now</button>
-            </a>
-        </div>
-    </section>
-
-    <section>
-        <div class="text-block">
-            <h2>Unleash the Power of Smart Tech</h2>
-            <p>Explore the future with our connected lifestyle products and enjoy seamless smart living.</p>
-            <a href="product.html" class="btn">
-                <button>Shop Now</button>
-            </a>
-        </div>
-        <div class="image-block">
-            <img src="../images/airpods.jfif" alt="Smart Devices" />
-        </div>
-    </section>
-
-    <div class="footer">
-        <div>
-            <p><strong>Resources</strong></p>
-            <a href="#">FAQs</a>
-            <a href="#">Support</a>
-            <a href="#">Terms</a>
-            <a href="#">Privacy</a>
-        </div>
-        <div>
-            <p><strong>Company</strong></p>
-            <a href="#">About Us</a>
-            <a href="#">Careers</a>
-            <a href="#">Press</a>
-            <a href="#">Partnerships</a>
-        </div>
-        <div>
-            <p><strong>Connect</strong></p>
-            <a href="#">Facebook</a>
-            <a href="#">Twitter</a>
-            <a href="#">Instagram</a>
-            <a href="#">LinkedIn</a>
-        </div>
+  <header>
+    <div>
+      <a href="web.html"><strong>AWE Electronics</strong></a>
     </div>
+    <nav>
+      <a href="web.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="product.html">Products</a>
+      <a href="#">Contact</a>
+      <a href="checkout.html">Checkout</a>
+      <a href="track_order.html" id="track-link" style="display: none;">Track Order</a>
+      <a href="#" id="logoutBtn" class="btn" style="display: none;">Logout</a>
+      <a href="login_signup.html" class="btn" id="loginBtn">Login</a>
+    </nav>
+  </header>
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const customerId = localStorage.getItem('customer_id');
-        const trackLink = document.getElementById('track-link');
-        const logoutBtn = document.getElementById('logoutBtn');
-        const loginBtn = document.getElementById('loginBtn');
+  <section>
+    <div class="text-block">
+      <p>Discover the Latest Smart Home Automation</p>
+      <h1>Elevate Your Living Space</h1>
+      <p>Revolutionize your home with cutting-edge smart technology. Seamlessly integrate your devices and optimize efficiency.</p>
+      <a href="product.html"><button>Explore Products</button></a>
+    </div>
+    <div class="image-block">
+      <img src="../images/smart device.jpg" alt="Smart Device" />
+    </div>
+  </section>
 
-        if (customerId) {
-          if (trackLink) trackLink.style.display = 'inline-block';
-          if (logoutBtn) logoutBtn.style.display = 'inline-block';
-          if (loginBtn) loginBtn.style.display = 'none';
+  <section>
+    <div class="image-block">
+      <img src="../images/apple watch ultra.jpg" alt="Tablet" />
+    </div>
+    <div class="text-block">
+      <h2>Enhance Your Digital Experience</h2>
+      <p>Seamless digital integration for smart productivity, lifestyle enhancements, and more.</p>
+      <a href="product.html" class="btn"><button>Shop Now</button></a>
+    </div>
+  </section>
 
-          logoutBtn?.addEventListener('click', function(e) {
-            e.preventDefault();
-            localStorage.removeItem('customer_id');
-            window.location.href = 'login_signup.html';
-          });
-        } else {
-          if (trackLink) trackLink.style.display = 'none';
-          if (logoutBtn) logoutBtn.style.display = 'none';
-          if (loginBtn) loginBtn.style.display = 'inline-block';
-        }
-      });
-    </script>
+  <section>
+    <div class="text-block">
+      <h2>Unleash the Power of Smart Tech</h2>
+      <p>Explore the future with our connected lifestyle products and enjoy seamless smart living.</p>
+      <a href="product.html" class="btn"><button>Shop Now</button></a>
+    </div>
+    <div class="image-block">
+      <img src="../images/airpods.jfif" alt="Smart Devices" />
+    </div>
+  </section>
+
+  <div class="footer">
+    <div>
+      <p><strong>Resources</strong></p>
+      <a href="#">FAQs</a>
+      <a href="#">Support</a>
+      <a href="#">Terms</a>
+      <a href="#">Privacy</a>
+    </div>
+    <div>
+      <p><strong>Company</strong></p>
+      <a href="about.html">About Us</a>
+      <a href="#">Careers</a>
+      <a href="#">Press</a>
+      <a href="#">Partnerships</a>
+    </div>
+  </div>
+
+  <!-- Shared JS -->
+  <script src="../js/session.js"></script>
+  <script src="../js/navbar_visibility.js"></script>
 </body>
 </html>
