--- a/Website/html/checkout.html
+++ b/Website/html/checkout.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AWE Electronics | Checkout</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../css/checkout.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../css/checkout.css">
 </head>
 <body>
   <header>
@@ -16,15 +16,16 @@
       <a href="product.html">Products</a>
       <a href="#">Contact</a>
       <a href="checkout.html">Checkout</a>
-      <a href="track_order.html" id="track-link" style="display: none;">Track Order</a>
-      <a href="#" id="logoutBtn" class="btn" style="display: none;">Logout</a>
+      <a href="track_order.html" id="track-link">Track Order</a>
+      <a href="#" class="btn" id="logoutBtn">Logout</a>
       <a href="login_signup.html" class="btn" id="loginBtn">Login</a>
     </nav>
   </header>
 
   <div class="container">
     <h2>Checkout</h2>
-    <!-- This div will be populated with cart items by JavaScript -->
+
+    <!-- Cart items will be rendered here -->
     <div id="cart-items-list">
       <p>Loading cart...</p>
     </div>
@@ -34,145 +35,51 @@
       <p>Shipping Fee: <span id="shipping-fee-amount">$0.00</span></p>
       <p><strong>Total: <span id="total-amount">$0.00</span></strong></p>
     </div>
-    <!-- Customer Information Form -->
-    <form class="customer-info">
-      <h3>Customer Information</h3>
-      <div class="form-group"><label for="customer-name">Name:</label>
-        <input type="text" id="customer-name" name="customer-name" required /></div>
-      <div class="form-group"><label for="customer-address">Address:</label>
-        <input type="text" id="customer-address" name="customer-address" required /></div>
-      <div class="form-group"><label for="customer-phone">Phone:</label>
-        <input type="tel" id="customer-phone" name="customer-phone" required /></div>
-      <div class="form-group"><label for="customer-email">Email:</label>
-        <input type="email" id="customer-email" name="customer-email" required /></div>
-    </form>
-    <!-- Payment Method Section -->
-    <form class="payment-method">
+
+    <!-- All in one form: customer + payment info -->
+    <form class="payment-method"> 
       <h3>Payment Method</h3>
-      <div class="form-group"><label for="card-number">Card Number:</label>
-        <input type="text" id="card-number" name="card-number" maxlength="19" placeholder="1234 5678 9012 3456" required /></div>
-      <div class="form-group"><label for="card-cvc">CVC:</label>
-        <input type="text" id="card-cvc" name="card-cvc" maxlength="4" placeholder="123" required /></div>
-      <div class="form-group"><label for="card-expiry">Expiry Date:</label>
-        <input type="text" id="card-expiry" name="card-expiry" maxlength="7" placeholder="MM/YY" required /></div>
-      <div class="form-group"><label for="card-name">Name on Card:</label>
-        <input type="text" id="card-name" name="card-name" required /></div>
-      <button type="submit">Proceed to Payment</button>
-    </form>
+      <div class="form-group">
+        <label for="card-number">Card Number:</label>
+        <input type="text" id="card-number" name="card-number" maxlength="19" placeholder="1234 5678 9012 3456" required>
+      </div>
+      <div class="form-group">
+        <label for="card-cvc">CVC:</label>
+        <input type="text" id="card-cvc" name="card-cvc" maxlength="4" placeholder="123" required>
+      </div>
+      <div class="form-group">
+        <label for="card-expiry">Expiry Date:</label>
+        <input type="text" id="card-expiry" name="card-expiry" maxlength="7" placeholder="MM/YY" required>
+      </div>
+      <div class="form-group">
+        <label for="card-name">Name on Card:</label>
+        <input type="text" id="card-name" name="card-name" required>
+      </div>
+      <button type="submit" class="btn">Proceed to Payment</button>
+    </form> 
   </div>
 
+  <div class="footer">
+    <div>
+      <p><strong>Resources</strong></p>
+      <a href="#">FAQs</a>
+      <a href="#">Support</a>
+      <a href="#">Terms</a>
+      <a href="#">Privacy</a>
+    </div>
+    <div>
+      <p><strong>Company</strong></p>
+      <a href="about.html">About Us</a>
+      <a href="#">Careers</a>
+      <a href="#">Press</a>
+      <a href="#">Partnerships</a>
+    </div>
+  </div>
+
+  <!-- JS -->
   <script src="../js/session.js"></script>
-
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const productList = document.getElementById('cart-items-list');
-      const subtotalAmountEl = document.getElementById('subtotal-amount');
-      const shippingFeeAmountEl = document.getElementById('shipping-fee-amount');
-      const totalAmountEl = document.getElementById('total-amount');
-
-      const customerId = localStorage.getItem('customer_id'); // Assumes customer_id is stored after login
-
-      if (customerId) {
-        // --- Logged-in user: Fetch cart from backend ---
-        fetch(`http://localhost:5002/get_cart_details?customer_id=${customerId}`)
-          .then((response) => response.json())
-          .then((data) => {
-            if (data.success && data.items) {
-              productList.innerHTML = ''; // Clear loading message
-              if (data.items.length === 0) {
-                productList.innerHTML = '<p>Your cart is empty.</p>';
-              } else {
-                data.items.forEach((item) => {
-                  const itemDiv = document.createElement('div');
-                  itemDiv.className = 'product';
-                  itemDiv.innerHTML = `
-                          <span>${item.name} (x${item.quantity})</span>
-                          <span>$${item.item_total.toFixed(2)}</span>
-                      `;
-                  productList.appendChild(itemDiv);
-                });
-              }
-              subtotalAmountEl.textContent = `$${data.subtotal.toFixed(2)}`;
-              shippingFeeAmountEl.textContent = `$${data.shipping_fee.toFixed(2)}`;
-              totalAmountEl.textContent = `$${data.total_amount.toFixed(2)}`;
-            } else {
-              productList.innerHTML = `<p>Error loading cart: ${
-                data.message || 'Unknown error'
-              }</p>`;
-            }
-          })
-          .catch((error) => {
-            console.error('Error fetching cart:', error);
-            productList.innerHTML =
-              '<p>Could not load cart. Please try again later.</p>';
-          });
-      } else {
-        // --- Guest user: Load cart from localStorage ---
-        const guestCartItems = JSON.parse(localStorage.getItem('guestCartItems')) || [];
-        productList.innerHTML = ''; // Clear loading message
-
-        if (guestCartItems.length === 0) {
-          productList.innerHTML =
-            '<p>Your cart is empty. Add items from the products page!</p>';
-          subtotalAmountEl.textContent = '$0.00';
-          shippingFeeAmountEl.textContent = '$0.00';
-          totalAmountEl.textContent = '$0.00';
-        } else {
-          let subtotal = 0;
-          guestCartItems.forEach((item) => {
-            const itemDiv = document.createElement('div');
-            itemDiv.className = 'product';
-            const itemTotal = item.price * item.quantity;
-            itemDiv.innerHTML = `
-                    <span>${item.name} (x${item.quantity})</span>
-                    <span>$${itemTotal.toFixed(2)}</span>
-                `;
-            productList.appendChild(itemDiv);
-            subtotal += itemTotal;
-          });
-          const shippingFee = subtotal > 0 ? 10 : 0; // Example shipping fee
-          const totalAmount = subtotal + shippingFee;
-
-          subtotalAmountEl.textContent = `$${subtotal.toFixed(2)}`;
-          shippingFeeAmountEl.textContent = `$${shippingFee.toFixed(2)}`;
-          totalAmountEl.textContent = `$${totalAmount.toFixed(2)}`;
-        }
-      }
-
-      // Navbar toggle logic
-      const trackLink = document.getElementById('track-link');
-      const logoutBtn = document.getElementById('logoutBtn');
-      const loginBtn = document.getElementById('loginBtn');
-
-      if (customerId) {
-        if (trackLink) trackLink.style.display = 'inline-block';
-        if (logoutBtn) logoutBtn.style.display = 'inline-block';
-        if (loginBtn) loginBtn.style.display = 'none';
-
-        logoutBtn?.addEventListener('click', function (e) {
-          e.preventDefault();
-          localStorage.removeItem('customer_id');
-          window.location.href = 'login_signup.html';
-        });
-      } else {
-        if (trackLink) trackLink.style.display = 'none';
-        if (logoutBtn) logoutBtn.style.display = 'none';
-        if (loginBtn) loginBtn.style.display = 'inline-block';
-      }
-
-      // Payment form submission
-      const paymentForm = document.querySelector('.payment-method');
-      if (paymentForm) {
-        paymentForm.addEventListener('submit', function (e) {
-          e.preventDefault();
-          alert('Payment successful');
-          if (!customerId) {
-            localStorage.removeItem('guestCartItems');
-          }
-          window.location.href = 'web.html';
-        });
-      }
-    });
-  </script>
+  <script type="module" src="../js/customer_cart_checkout.js"></script>
+  <script src="../js/services/CustomerInformationService.js"></script>
+  <script src="../js/navbar_visibility.js"></script>
 </body>
 </html>
