--- a/Website/html/product.html
+++ b/Website/html/product.html
@@ -4,100 +4,63 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AWE Electronics | Products</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../css/product.css" />
 </head>
 <body>
   <header>
-    <div><strong>AWE Electronics</strong></div>
+    <div>
+      <a href="web.html"><strong>AWE Electronics</strong></a>
+    </div>
     <nav>
       <a href="web.html">Home</a>
-      <a href="#">About</a>
+      <a href="about.html">About</a>
       <a href="product.html">Products</a>
-      <a href="#">Contact</a>
-      <a href="checkout.html">Checkout</a>
+      <a href="checkout.html" class="btn">Checkout (<span id="cart-count">0</span>)</a>
       <a href="track_order.html" id="track-link" style="display: none;">Track Order</a>
       <a href="#" id="logoutBtn" class="btn" style="display: none;">Logout</a>
       <a href="login_signup.html" class="btn" id="loginBtn">Login</a>
     </nav>
   </header>
 
-  <section class="products-section">
-    <div id="product-list" class="product-grid"></div>
-  </section>
+  <main>
+    <section class="products-section">
+      <div class="product-header">
+        <h2>Available Products</h2>
+        <input type="text" id="search-input" placeholder="Search products..." />
+      </div>
+      <div id="product-list" class="product-grid"></div>
+    </section>
+  </main>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const productList = document.getElementById('product-list');
-      productList.innerHTML = '<div style="grid-column: 1/-1; text-align:center;">Loading products...</div>';
+  <footer class="footer">
+    <div>
+      <p><strong>Resources</strong></p>
+      <a href="#">FAQs</a>
+      <a href="#">Support</a>
+      <a href="#">Terms</a>
+      <a href="#">Privacy</a>
+    </div>
+    <div>
+      <p><strong>Company</strong></p>
+      <a href="#">About Us</a>
+      <a href="#">Careers</a>
+      <a href="#">Press</a>
+      <a href="#">Partnerships</a>
+    </div>
+    <div>
+      <p><strong>Connect</strong></p>
+      <a href="#">Facebook</a>
+      <a href="#">Twitter</a>
+      <a href="#">Instagram</a>
+      <a href="#">LinkedIn</a>
+    </div>
+  </footer>
 
-      const formData = new FormData();
-      formData.append('action', 'get_all');
-
-      fetch('http://localhost:5000/admin_update_product', {
-        method: 'POST',
-        body: formData
-      })
-        .then(res => res.json())
-        .then(data => {
-          productList.innerHTML = '';
-          if (data.success && data.products && data.products.length > 0) {
-            data.products.forEach(product => {
-              const card = document.createElement('div');
-              card.className = 'product-card';
-              card.innerHTML = `
-                <img src="${product.image}" alt="${product.name}" onerror="this.src='../images/placeholder.jpg'">
-                <h3>${product.name}</h3>
-                <div class="price">$${parseFloat(product.price).toFixed(2)}</div>
-                <div class="product-actions">
-                  <a href="#">Learn More</a>
-                  <button class="add-to-cart-btn" data-product-id="${product.ProductID}">Add to Cart</button>
-                </div>
-              `;
-              productList.appendChild(card);
-            });
-
-            // Attach event listeners to Add to Cart buttons
-            document.querySelectorAll('.add-to-cart-btn').forEach(button => {
-              button.addEventListener('click', function () {
-                const productId = this.getAttribute('data-product-id');
-                console.log(`Add to Cart clicked for product ID: ${productId}`);
-                // TODO: Add your add-to-cart logic here
-                alert(`Added product ID ${productId} to cart!`);
-              });
-            });
-
-          } else {
-            productList.innerHTML = '<div style="grid-column: 1/-1; text-align:center;">No products found</div>';
-          }
-        })
-        .catch(err => {
-          console.error('Failed to load products', err);
-          productList.innerHTML = '<div style="grid-column: 1/-1; text-align:center; color:red;">Failed to load products</div>';
-        });
-
-      // Navbar toggle logic
-      const customerId = localStorage.getItem('customer_id');
-      const trackLink = document.getElementById('track-link');
-      const logoutBtn = document.getElementById('logoutBtn');
-      const loginBtn = document.getElementById('loginBtn');
-
-      if (customerId) {
-        if (trackLink) trackLink.style.display = 'inline-block';
-        if (logoutBtn) logoutBtn.style.display = 'inline-block';
-        if (loginBtn) loginBtn.style.display = 'none';
-
-        logoutBtn?.addEventListener('click', e => {
-          e.preventDefault();
-          localStorage.removeItem('customer_id');
-          window.location.href = 'login_signup.html';
-        });
-      } else {
-        if (trackLink) trackLink.style.display = 'none';
-        if (logoutBtn) logoutBtn.style.display = 'none';
-        if (loginBtn) loginBtn.style.display = 'inline-block';
-      }
-    });
-  </script>
+  <!-- JS -->
+  <script src="../js/services/ProductService.js"></script>
+  <script src="../js/session.js"></script>
+  <script src="../js/customer_product.js"></script>
+  <script src="../js/navbar_visibility.js"></script>
 </body>
 </html>
