--- a/Website/html/login_signup.html
+++ b/Website/html/login_signup.html
@@ -52,14 +52,15 @@
 
     <!-- Sign Up Form -->
     <form id="signup-form" style="display: none;">
-      <input type="text" placeholder="First Name" required />
-      <input type="text" placeholder="Last Name" required />
-      <input type="email" placeholder="Email" required />
-      <input type="tel" placeholder="Phone Number" required />
-      <input type="text" placeholder="Address" required /> 
-      <input type="password" placeholder="Password" required />
+      <input type="text" name="first_name" placeholder="First Name" required />
+      <input type="text" name="last_name" placeholder="Last Name" required />
+      <input type="email" name="email" placeholder="Email" required />
+      <input type="tel" name="phone" placeholder="Phone Number" required />
+      <input type="text" name="address" placeholder="Address" required />
+      <input type="password" name="password" placeholder="Password" required />
       <button type="submit">Sign Up</button>
     </form>
+    
 
     <!-- Admin Sign Up Form -->
     <form id="admin-signup-form" style="display: none;">
