Navbar visibillity issue fix

--- a/Website/html/about.html
+++ b/Website/html/about.html
@@ -19,7 +19,7 @@
             <a href="product.html">Products</a>
             <a href="#">Contact</a>
             <a href="checkout.html">Checkout</a>
-            <a href="track_order.html">Track Order</a>
+            <a href="track_order.html" id="track-link" style="display: none;">Track Order</a>
             <a href="login_signup.html" class="btn" id="login-logout-btn">Login</a>
         </nav>
     </header>
