--- a/Website/html/customer_product.html
+++ b/Website/html/customer_product.html
@@ -14,6 +14,7 @@
       <a href="web.html">Home</a>
       <a href="about.html">About</a>
       <a href="product.html">Products</a>
+      <a href="#">Contact</a>
       <a href="checkout.html" class="btn">Checkout (<span id="cart-count">0</span>)</a>
       <a href="track_order.html" id="track-link" style="display: none;">Track Order</a>
       <a href="#" id="logoutBtn" class="btn" style="display: none;">Logout</a>
